--- a/public/index.html
+++ b/public/index.html
@@ -14,22 +14,15 @@
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       <!-- CSS only -->
       <link
-         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
          rel="stylesheet"
-         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-         crossorigin="anonymous"
-      />
-      <link
-         rel="stylesheet"
-         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
          crossorigin="anonymous"
       />
 
       <title>Apple Store</title>
    </head>
    <body>
-      <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
    </body>
 </html>
